--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
         minSdk 24
         targetSdk 33
         versionCode 1
-        versionName "1.0"
+        versionName "1.1"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -49,6 +49,10 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
+
+    // EzX
+    implementation 'com.github.kyuubiran:EzXHelper:1.0.3'
+    compileOnly("de.robv.android.xposed:api:82")
 
     // PermissionX
     implementation 'com.guolindev.permissionx:permissionx:1.6.1'
